fix #39 table insert errors

--- a/ui/style/fontello/css/fontello-codes.css
+++ b/ui/style/fontello/css/fontello-codes.css
@@ -21,4 +21,6 @@
 .fontello-cancel-alt:before { content: '\e813'; } /* '' */
 .fontello-cancel-squared:before { content: '\e814'; } /* '' */
 .fontello-cancel:before { content: '\e815'; } /* '' */
+.fontello-feather:before { content: '\e816'; } /* '' */
+.fontello-pencil-alt:before { content: '\e817'; } /* '' */
 .fontello-check-empty:before { content: '\f096'; } /* '' */
