--- a/ui/style/fontello/css/fontello.css
+++ b/ui/style/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?93418225');
-  src: url('../font/fontello.eot?93418225#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?93418225') format('woff2'),
-       url('../font/fontello.woff?93418225') format('woff'),
-       url('../font/fontello.ttf?93418225') format('truetype'),
-       url('../font/fontello.svg?93418225#fontello') format('svg');
+  src: url('../font/fontello.eot?44413154');
+  src: url('../font/fontello.eot?44413154#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?44413154') format('woff2'),
+       url('../font/fontello.woff?44413154') format('woff'),
+       url('../font/fontello.ttf?44413154') format('truetype'),
+       url('../font/fontello.svg?44413154#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?93418225#fontello') format('svg');
+    src: url('../font/fontello.svg?44413154#fontello') format('svg');
   }
 }
 */
@@ -77,4 +77,6 @@
 .fontello-cancel-alt:before { content: '\e813'; } /* '' */
 .fontello-cancel-squared:before { content: '\e814'; } /* '' */
 .fontello-cancel:before { content: '\e815'; } /* '' */
+.fontello-feather:before { content: '\e816'; } /* '' */
+.fontello-pencil-alt:before { content: '\e817'; } /* '' */
 .fontello-check-empty:before { content: '\f096'; } /* '' */
