--- a/ui/style/table.css
+++ b/ui/style/table.css
@@ -242,6 +242,9 @@
     border-radius: 3px;
     box-shadow: 0 0 0.3em black;
     margin-top: 1.5em;
+    margin-right: 1em;
+    white-space: normal;
+    text-align: left;
 }
 
 .table-row--deleted {
