--- a/ui/style/light.css
+++ b/ui/style/light.css
@@ -4,7 +4,7 @@
   --bg: #eee;
   --leftbar-shadow-color: #ccc;
   --panel-bg: #fcfcfc;
-  --queryplan-edge-color: #888;
+  --queryplan-edge-color: #aaa;
   --table-border-color: #aaa;
   --table-head-bg-color: #ddd;
   --table-row-bg-color: #eee;
