--- a/ui/style/app.css
+++ b/ui/style/app.css
@@ -1,7 +1,7 @@
 @import url(./codemirror.css);
 @import url(./leaflet.css);
 @import url(./fontello/css/fontello-embedded.css);
-
+@import url(../lib/roboto/roboto.css);
 @import url(./light.css);
 @import url(./codeform.css);
 @import url(./draft.css);
@@ -28,7 +28,7 @@ body {
   left: 0;
   right: 0;
   font-size: 16px;
-  font-family: 'DejaVu Sans', 'Verdana', sans-serif;
+  font-family: 'Roboto', 'DejaVu Sans', 'Verdana', sans-serif;
   color: var(--fg);
   background-color: var(--bg);
 }
