--- a/ui/style/app.css
+++ b/ui/style/app.css
@@ -1,5 +1,4 @@
 @import url(./codemirror.css);
-@import url(./leaflet.css);
 @import url(./fontello/css/fontello-embedded.css);
 @import url(../lib/roboto/roboto.css);
 @import url(./light.css);
@@ -15,7 +14,6 @@
 @import url(./table.css);
 @import url(./treenode.css);
 @import url(./map.css);
-@import url(./map_popup.css);
 
 body {
   overflow: hidden; /* disable bouncing scroll in macos */
@@ -29,8 +27,8 @@ body {
   right: 0;
   font-size: 16px;
   font-family: 'Roboto', 'DejaVu Sans', 'Verdana', sans-serif;
-  color: var(--fg);
-  background-color: var(--bg);
+  color: var(--pgbbcolor-fg);
+  background-color: var(--pgbbcolor-bg);
 }
 
 .main-leftbar {
@@ -39,7 +37,7 @@ body {
   top: 0;
   left: 0;
   padding: .5em .1em;
-  background-color: var(--bg);
+  background-color: var(--pgbbcolor-bg);
   box-shadow: 0 0 .5em var(--leftbar-shadow-color);
   z-index: 2;
 }
@@ -122,7 +120,7 @@ body {
 
 .main-nav,
 .main-codeform {
-  background-color: var(--panel-bg);
+  background-color: var(--pgbbcolor-panel-bg);
 }
 
 *::-webkit-scrollbar {
@@ -131,15 +129,6 @@ body {
   padding: 2px;
 }
 
-/*.light*/ *::-webkit-scrollbar,
-/*.light*/ *::-webkit-scrollbar-corner {
-  background-color: #ddd;
-}
-
-.dark *::-webkit-scrollbar,
-.dark *::-webkit-scrollbar-corner {
-  background-color: #222;
-}
 
 *::-webkit-scrollbar-button:start:decrement,
 *::-webkit-scrollbar-button:end:increment {
@@ -152,24 +141,4 @@ body {
 *::-webkit-scrollbar-thumb {
   border-radius: 6px;
   border: 2px solid;
-}
-
-/*.light*/ *::-webkit-scrollbar-thumb {
-  background-color: #999;
-  color: #ddd;
-}
-
-.dark *::-webkit-scrollbar-thumb {
-  background-color: rgba(255,255,255,.2);
-  color: #222;
-}
-
-.dark * {
-  scrollbar-base-color: #333;
-  scrollbar-3dlight-color: #222;
-  scrollbar-highlight-color: #222;
-  scrollbar-track-color: #222;
-  scrollbar-arrow-color: #888;
-  scrollbar-shadow-color: #222;
-  scrollbar-dark-shadow-color: #222;
 }
