--- a/ui/lib/fontello/css/fontello-codes.css
+++ b/ui/lib/fontello/css/fontello-codes.css
@@ -6,7 +6,6 @@
 .fontello-info:before { content: '\e804'; } /* '' */
 .fontello-trigger:before { content: '\e805'; } /* '' */
 .fontello-schema:before { content: '\e806'; } /* '' */
-.fontello-check:before { content: '\e807'; } /* '' */
 .fontello-extension:before { content: '\e808'; } /* '' */
 .fontello-forward:before { content: '\e809'; } /* '' */
 .fontello-uniqkey:before { content: '\e80a'; } /* '' */
@@ -14,7 +13,6 @@
 .fontello-key:before { content: '\e80c'; } /* '' */
 .fontello-column:before { content: '\e80d'; } /* '' */
 .fontello-triangle-right:before { content: '\e80e'; } /* '' */
-.fontello-index:before { content: '\e80f'; } /* '' */
 .fontello-table:before { content: '\e810'; } /* '' */
 .fontello-trash-empty:before { content: '\e811'; } /* '' */
 .fontello-cancel-alt-filled:before { content: '\e812'; } /* '' */
@@ -22,5 +20,10 @@
 .fontello-cancel-squared:before { content: '\e814'; } /* '' */
 .fontello-cancel:before { content: '\e815'; } /* '' */
 .fontello-feather:before { content: '\e816'; } /* '' */
-.fontello-pencil-alt:before { content: '\e817'; } /* '' */
+.fontello-edit:before { content: '\e817'; } /* '' */
+.fontello-index:before { content: '\e818'; } /* '' */
+.fontello-book:before { content: '\e819'; } /* '' */
+.fontello-rocket-1:before { content: '\e81a'; } /* '' */
+.fontello-check:before { content: '\e81b'; } /* '' */
 .fontello-check-empty:before { content: '\f096'; } /* '' */
+.fontello-rocket:before { content: '\f135'; } /* '' */
